--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.10.1",
+    "@vercel/speed-insights": "^1.3.1",
     "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
     "browser-router": "^0.2.0",
